--- a/include/inlined-head.html
+++ b/include/inlined-head.html
@@ -751,7 +751,7 @@ figure img[src$=".svg"]:not(.invert):not(.invert-auto) {
 }
 /*  Special styles for special browsers.
 	*/
-@supports (-moz-user-focus: normal) {
+@supports (-moz-appearance: none) {
 	.markdownBody figure audio {
 	    border-color: var(--GW-figure-outline-color);
 	}
@@ -951,6 +951,6 @@ a[data-link-icon-type*='svg'] .link-icon-hook::after {
 	background-color: var(--GW-wikipedia-image-background-color);
 }
 </style>
-<link rel="stylesheet" href="/static/css/head.css?v=1709739281">
-<script src="/static/js/head.js?v=1709739281"></script>
+<link rel="stylesheet" href="/static/css/head.css?v=1709862164">
+<script src="/static/js/head.js?v=1709862164"></script>
 <link rel="preload" href="/static/img/icon/icons.svg?v=1709357831" as="image">
