--- a/css/dark-mode-adjustments.css
+++ b/css/dark-mode-adjustments.css
@@ -84,7 +84,7 @@ figure img[src$=".svg"]:not(.invert):not(.invert-auto) {
 }
 /*  Special styles for special browsers.
 	*/
-@supports (-moz-user-focus: normal) {
+@supports (-moz-appearance: none) {
 	.markdownBody figure audio {
 	    border-color: var(--GW-figure-outline-color);
 	}
