default.html: xotd: put in <p>s & replace-container so the placeholder looks nicer before it transcludes

--- a/template/default.html
+++ b/template/default.html
@@ -166,11 +166,11 @@
           </p>
 
           <div id="x-of-the-day">
-            <a id="qotd" class="include include-spinner-not icon-not" href="/metadata/today-quote.html">[Quote Of The Day]</a>
+            <p><a id="qotd" class="include-replace-container include-spinner-not icon-not" href="/metadata/today-quote.html">[Quote Of The Day]</a></p>
 
-            <a id="sotd" class="include include-spinner-not icon-not" href="/metadata/today-site.html">[Site Of The Day]</a>
+            <p><a id="sotd" class="include-replace-container include-spinner-not icon-not" href="/metadata/today-site.html">[Site Of The Day]</a></p>
 
-            <a id="atod" class="include include-spinner-not icon-not" href="/metadata/today-annotation.html">[Annotation Of The Day]</a>
+            <p><a id="atod" class="include-replace-container include-spinner-not icon-not" href="/metadata/today-annotation.html">[Annotation Of The Day]</a></p>
           </div>
         </div>
 
