--- a/template/default.html
+++ b/template/default.html
@@ -101,7 +101,7 @@
         <a class="logo" rel="home me contents" href="/index" title="Homepage: categorized list of articles index">
           <svg class="logo-image" viewBox="0 0 64 75"><use href="/static/img/logo/logo-smooth.svg#logo" /></svg>
         </a>
-        <div class="sidebar-links" title="Links about this website">
+        <div class="sidebar-links">
         <a class="icon-not site  link-page link-annotated" href="/about"                 title="Site ideals, source, content, traffic, examples, license" rel="author">Site</a>
         <a class="icon-not me    link-page link-annotated" href="/me"                    title="Who am I online, what have I done, what am I like? Contact information; sites I use; things I've worked on" rel="author">Me</a>
         <a class="icon-not new   link-page link-annotated" href="/changelog"             title="Changelog of what's new or updated">Changes</a>
@@ -116,7 +116,7 @@
       </header>
 
       <article> $if(index)$ $else$
-        <div class="markdownBody" id="page-metadata" title="Page Metadata">
+        <div class="markdownBody" id="page-metadata">
           $if(description)$
             <div class="page-description" title="Short description of page."><p>$description$</p></div>$endif$
             $if(tagsHTML)$ $tagsHTML$ $endif$
