--- a/css/style-GENERATED.css
+++ b/css/style-GENERATED.css
@@ -2511,6 +2511,10 @@ table caption {
     background-color: inherit;
 }
 
+table tbody {
+	--text-alignment: left;
+}
+
 table th,
 table td {
     padding: 7px 10px;
