default.html: bl/sl/lb footer: not sure why that is titled 'further reading' when it only pertains to backlinks, so rename it 'Backlinks'

--- a/template/default.html
+++ b/template/default.html
@@ -138,7 +138,7 @@
         $if(index)$ $else$
         <noscript><div id="noscript-warning-footer" class="admonition error" title="Warning to NoScript Users"><div class="admonition-title"><p>[<strong>Error</strong>: JavaScript disabled.]</p></div> <p>[Backlinks, similar links, and the link-bibliography require JS enabled to load.]</p></div></noscript>
         $if(backlinksYes)$<section id="backlinks-section" class="level1">
-          <h1><a href="#backlinks-section" title="Link to section: § 'Further Reading'">Further Reading</a></h1>
+          <h1><a href="#backlinks-section" title="Link to section: § 'Backlinks'">Backlinks</a></h1>
           <a id="backlinks" href="/metadata/annotation/backlink/$escapedURL$" title="Reverse citations/backlinks for this page (the list of other pages which link to this page)." class="backlinks include-strict">[Backlinks (what links here)]</a>
         </section>$endif$
         $if(similarsYes)$<section id="similars-section" class="level1">
