--- a/css/style-VERSIONED.css
+++ b/css/style-VERSIONED.css
@@ -2411,18 +2411,18 @@ p.intro-graf::first-line {
 }
 
 .admonition.tip::before {
-    background-image: url('/static/img/icon/icons.svg?v=1710872153#info-circle-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1708467906#info-circle-regular');
 }
 .admonition.note::before {
-    background-image: url('/static/img/icon/icons.svg?v=1710872153#hand-point-right-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1708467906#hand-point-right-regular');
     filter: invert(1);
 }
 .admonition.warning::before {
-    background-image: url('/static/img/icon/icons.svg?v=1710872153#triangle-exclamation-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1708467906#triangle-exclamation-regular');
     filter: invert(1);
 }
 .admonition.error::before {
-    background-image: url('/static/img/icon/icons.svg?v=1710872153#skull-crossbones-solid');
+    background-image: url('/static/img/icon/icons.svg?v=1708467906#skull-crossbones-solid');
     padding: 0.75em;
     top: 0;
     filter: invert(1);
@@ -2514,6 +2514,20 @@ table caption {
     background-color: inherit;
 }
 
+/*
+Sticky table headers: the column labels of larger tables are 'sticky', and will remain visible when the reader scrolls through a large table, so they can see at a glance what each column contains.
+
+Implementation: This is supported natively in CSS by `position:sticky`.
+However, the naive use of sticky table headers is fragile and runs into many problems (eg disappearing borders <https://stackoverflow.com/questions/50361698/border-style-do-not-work-with-sticky-position-element>, overflows, or _z_-index bugs where the sticky header is *below* table elements).
+It works mostly in: tables in the base page, not in a collapse, not wider than the page, not in a blockquote, not in popups/popovers, etc.
+Because of the limited scope & many bugs, the naive approach was not worth implementing: small simple tables don't need it, while the large complex tables that do are relatively rare & would probably trigger bugs.
+
+So we implement them in a more complex way to work around bugs.
+To limit sticky issues, we only do sticky headers on 'large' tables where 'large' > 1 viewport height (ie. a table which would require scrolling). So the table becomes v-scrollable within an inner scroll container (set to be substantially smaller than the window size so there is plenty of room to click on and 'untrap' the mouse), like code-blocks on mobile.
+Within that scroll container, the headers are sticky.
+Since they are confined to the inner container and don't need to interact with any other page elements, most of the problems of sticky elements are avoided.
+Then other issues are dealt with by a bunch of small CSS tweaks.
+*/
 table thead {
 	position: sticky;
 	top: -1px;
@@ -4131,11 +4145,11 @@ ol.link-bibliography-list-compact > li::before {
     margin: auto;
 }
 
-/*	WP wraps references entirely in <cite> elements; <cite> is styled by 
-	browsers (Chrome/FF) by default in italics. No one wants their entire 
-	reference in italics, so WP resets the font to the default style (whatever 
-	that is), and styles italics bits (like book titles) manually. We need to 
-	replicate that, or else references sections in our WP popups will be 
+/*	WP wraps references entirely in <cite> elements; <cite> is styled by
+	browsers (Chrome/FF) by default in italics. No one wants their entire
+	reference in italics, so WP resets the font to the default style (whatever
+	that is), and styles italics bits (like book titles) manually. We need to
+	replicate that, or else references sections in our WP popups will be
 	entirely italics!
  */
 .annotation.wikipedia-entry cite,
@@ -5411,7 +5425,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 
 .popup .popframe-loading-spinner-view::before {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1710872153#circle-notch-light');
+    background-image: url('/static/img/icon/icons.svg?v=1708467906#circle-notch-light');
     animation: fa-spin 2s infinite linear;
     position: absolute;
     width: calc(100% - 1em);
@@ -5583,7 +5597,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
     */
 .popup.image:not(.dimensions-specified).loading-failed::after {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1710872153#xmark-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1708467906#xmark-regular');
     background-position: center;
     box-sizing: border-box;
     margin: 8px;
@@ -6031,7 +6045,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 
 .popin .popframe-loading-spinner-view::before {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1710872153#circle-notch-light');
+    background-image: url('/static/img/icon/icons.svg?v=1708467906#circle-notch-light');
     animation: fa-spin 2s infinite linear;
     position: absolute;
     width: calc(100% - 1em);
@@ -6972,7 +6986,7 @@ a.spawns-popin.popin-open:not(.footnote-ref) {
 
 #image-focus-overlay .help-overlay::after {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1710872153#question');
+    background-image: url('/static/img/icon/icons.svg?v=1708467906#question');
     background-origin: content-box;
     background-clip: content-box;
     position: absolute;
@@ -7182,7 +7196,7 @@ a.spawns-popin.popin-open:not(.footnote-ref) {
 .image-wrapper.focusable.small-image::after {
 	content: "";
     background-color: var(--SA-image-focus-image-hover-tooltip-inverted-background-color);
-	background-image: url('/static/img/icon/icons.svg?v=1710872153#magnifying-glass-plus-light');
+	background-image: url('/static/img/icon/icons.svg?v=1708467906#magnifying-glass-plus-light');
 	background-size: 56px 56px;
 	background-origin: content-box;
 	background-repeat: no-repeat;
@@ -7548,7 +7562,7 @@ a.include-loading-failed:empty {
 }
 
 a.include-loading.include-spinner {
-    --spinner-image: url('/static/img/icon/icons.svg?v=1710872153#circle-notch-solid');
+    --spinner-image: url('/static/img/icon/icons.svg?v=1708467906#circle-notch-solid');
 
     pointer-events: none;
 }
@@ -7623,7 +7637,7 @@ a.include-loading.include-spinner[data-link-icon]:not(:empty)::after {
 
 .markdownBody span.block-context-highlighted:empty::before {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1710872153#hand-point-right-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1708467906#hand-point-right-regular');
     background-origin: content-box;
     background-clip: content-box;
     background-repeat: no-repeat;
