--- a/template/default.html
+++ b/template/default.html
@@ -172,6 +172,8 @@
 
             <p><a id="atod" class="include-replace-container include-spinner-not icon-not" href="/metadata/today-annotation.html">[Annotation Of The Day]</a></p>
           </div>
+
+          <a id="psa-adblock" class="include adsense include-spinner-not icon-not" href="/static/template/psa-adblock.html">[adblock public service announcement]</a>
         </div>
 
       </article>
