PSA: continue tweaking call; relocate psa-adblock.html to /metadata/ to benefit from easy HTML transclusion like the xotd snippets

--- a/template/default.html
+++ b/template/default.html
@@ -173,7 +173,7 @@
             <p><a id="atod" class="include-replace-container include-spinner-not icon-not" href="/metadata/today-annotation.html">[Annotation Of The Day]</a></p>
           </div>
 
-          <a id="psa-adblock" class="include adsense include-spinner-not icon-not" href="/static/template/psa-adblock.html">[adblock public service announcement]</a>
+          <p><a id="psa-adblock" class="include-replace-container adsense include-spinner-not icon-not" href="/metadata/psa-adblock.html">[adblock public service announcement]</a></p>
         </div>
 
       </article>
