--- a/css/style-VERSIONED.css
+++ b/css/style-VERSIONED.css
@@ -2411,18 +2411,18 @@ p.intro-graf::first-line {
 }
 
 .admonition.tip::before {
-    background-image: url('/static/img/icon/icons.svg?v=1708467906#info-circle-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1710872153#info-circle-regular');
 }
 .admonition.note::before {
-    background-image: url('/static/img/icon/icons.svg?v=1708467906#hand-point-right-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1710872153#hand-point-right-regular');
     filter: invert(1);
 }
 .admonition.warning::before {
-    background-image: url('/static/img/icon/icons.svg?v=1708467906#triangle-exclamation-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1710872153#triangle-exclamation-regular');
     filter: invert(1);
 }
 .admonition.error::before {
-    background-image: url('/static/img/icon/icons.svg?v=1708467906#skull-crossbones-solid');
+    background-image: url('/static/img/icon/icons.svg?v=1710872153#skull-crossbones-solid');
     padding: 0.75em;
     top: 0;
     filter: invert(1);
@@ -4671,6 +4671,10 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
     max-height: unset;
 }
 
+.popframe-body .table-scroll-wrapper {
+	max-height: unset;
+}
+
 .popframe-body .marginnote {
     display: initial;
 }
@@ -5425,7 +5429,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 
 .popup .popframe-loading-spinner-view::before {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1708467906#circle-notch-light');
+    background-image: url('/static/img/icon/icons.svg?v=1710872153#circle-notch-light');
     animation: fa-spin 2s infinite linear;
     position: absolute;
     width: calc(100% - 1em);
@@ -5597,7 +5601,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
     */
 .popup.image:not(.dimensions-specified).loading-failed::after {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1708467906#xmark-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1710872153#xmark-regular');
     background-position: center;
     box-sizing: border-box;
     margin: 8px;
@@ -6045,7 +6049,7 @@ body.page-dnm-arrest .table-wrapper#data-table td:last-of-type {
 
 .popin .popframe-loading-spinner-view::before {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1708467906#circle-notch-light');
+    background-image: url('/static/img/icon/icons.svg?v=1710872153#circle-notch-light');
     animation: fa-spin 2s infinite linear;
     position: absolute;
     width: calc(100% - 1em);
@@ -6986,7 +6990,7 @@ a.spawns-popin.popin-open:not(.footnote-ref) {
 
 #image-focus-overlay .help-overlay::after {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1708467906#question');
+    background-image: url('/static/img/icon/icons.svg?v=1710872153#question');
     background-origin: content-box;
     background-clip: content-box;
     position: absolute;
@@ -7196,7 +7200,7 @@ a.spawns-popin.popin-open:not(.footnote-ref) {
 .image-wrapper.focusable.small-image::after {
 	content: "";
     background-color: var(--SA-image-focus-image-hover-tooltip-inverted-background-color);
-	background-image: url('/static/img/icon/icons.svg?v=1708467906#magnifying-glass-plus-light');
+	background-image: url('/static/img/icon/icons.svg?v=1710872153#magnifying-glass-plus-light');
 	background-size: 56px 56px;
 	background-origin: content-box;
 	background-repeat: no-repeat;
@@ -7562,7 +7566,7 @@ a.include-loading-failed:empty {
 }
 
 a.include-loading.include-spinner {
-    --spinner-image: url('/static/img/icon/icons.svg?v=1708467906#circle-notch-solid');
+    --spinner-image: url('/static/img/icon/icons.svg?v=1710872153#circle-notch-solid');
 
     pointer-events: none;
 }
@@ -7637,7 +7641,7 @@ a.include-loading.include-spinner[data-link-icon]:not(:empty)::after {
 
 .markdownBody span.block-context-highlighted:empty::before {
     content: "";
-    background-image: url('/static/img/icon/icons.svg?v=1708467906#hand-point-right-regular');
+    background-image: url('/static/img/icon/icons.svg?v=1710872153#hand-point-right-regular');
     background-origin: content-box;
     background-clip: content-box;
     background-repeat: no-repeat;
